--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is the app where I have started to revive my React skill",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
